--- a/Jax'sBlog.csproj
+++ b/Jax'sBlog.csproj
@@ -72,12 +72,15 @@
     <Content Include="Content\all.min.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\clean-blog.min.css" />
+    <Content Include="Images\About Header.png" />
     <Content Include="Images\android-chrome-192x192.png" />
     <Content Include="Images\android-chrome-512x512.png" />
     <Content Include="Images\apple-touch-icon.png" />
     <Content Include="Images\favicon-16x16.png" />
     <Content Include="Images\favicon-32x32.png" />
     <Content Include="Images\favicon.ico" />
+    <Content Include="Images\Header 1.png" />
+    <Content Include="Images\Header 2.png" />
     <Content Include="Images\index.jpg" />
     <Content Include="index.html" />
     <Content Include="post.html" />
